<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ResultActivity">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_180sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:src="@drawable/ic_trophy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="sans-serif-black"
        android:text="@string/congratulations"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="@+id/imageView5"
        app:layout_constraintStart_toStartOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/your_scor"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/_3_10"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintEnd_toEndOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_18sdp"
        android:text="@string/earned_coin"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="@+id/score"
        app:layout_constraintStart_toStartOf="@+id/score"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <TextView
        android:id="@+id/earnedCoins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_dollar"
        android:drawablePadding="@dimen/_7sdp"
        android:fontFamily="sans-serif-black"
        android:text="@string/_500"
        android:textSize="@dimen/_35sdp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="@+id/textView13"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/shareBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:background="@drawable/button_3"
        android:textAlignment="center"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/color_white"
        android:fontFamily="@font/roboto_bold"
        android:drawableLeft="@drawable/ic_share"
        android:drawablePadding="@dimen/_14sdp"
        android:text="@string/share"
        android:padding="@dimen/_15sdp"
        app:layout_constraintEnd_toStartOf="@+id/restartBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/earnedCoins" />

    <TextView
        android:id="@+id/restartBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:background="@drawable/button_4"
        android:textAlignment="center"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/color_white"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/restart"
        android:padding="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shareBtn"
        app:layout_constraintTop_toBottomOf="@+id/earnedCoins" />
</androidx.constraintlayout.widget.ConstraintLayout>