<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginTop="@dimen/_24sdp"
        android:src="@drawable/avatar"
        app:civ_border_color="#FF000000"
        app:civ_border_width="@dimen/_2sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/textbox"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/colorPurple"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/textbox"
        android:drawableLeft="@drawable/user"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/colorPurple"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/textbox"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="@dimen/_10sdp"
        android:drawableTint="@color/colorPurple"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/textbox"
        android:drawableLeft="@drawable/contact"
        android:drawablePadding="@dimen/_10sdp"
        android:padding="@dimen/_12sdp"
        android:drawableTint="@color/colorPurple"
        android:hint="@string/contact_no"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/profileBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_4"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/_25sdp"
        android:padding="@dimen/_12sdp"
        android:text="@string/update_profile"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <TextView
        android:id="@+id/logoutBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_14sdp"
        android:background="@drawable/button_3"
        android:fontFamily="@font/roboto_bold"
        android:padding="@dimen/_12sdp"
        android:text="@string/log_out"
        android:textAlignment="center"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="@+id/profileBtn"
        app:layout_constraintStart_toStartOf="@+id/profileBtn"
        app:layout_constraintTop_toBottomOf="@+id/profileBtn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>


