<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_68sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quizmelogo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_32sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_32sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/welcome_back"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_24sdp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_5sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/background" />

            <EditText
                android:id="@+id/emailBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/email"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableTint="@color/colorPurple"
                android:ems="10"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_15sdp" />

            <EditText
                android:id="@+id/passwordBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/password"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableTint="@color/colorPurple"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="@dimen/_15sdp" />

            <EditText
                android:id="@+id/confirm_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/textbox"
                android:drawableStart="@drawable/confirm_pass"
                android:drawablePadding="@dimen/_15sdp"
                android:drawableTint="@color/colorPurple"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="@dimen/_15sdp" />

            <TextView
                android:id="@+id/forgotPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/button_2"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="@dimen/_15sdp"
                android:text="@string/login"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_16sdp" />

            <TextView
                android:id="@+id/createNewBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button_1"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_16sdp"
                android:padding="@dimen/_15sdp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>