<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/quizmelogo" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        app:cardCornerRadius="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center"
                android:text="@string/create_an_account"
                android:textColor="@color/colorPurple"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_3sdp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/background" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/nameBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/textbox"
                        android:drawableStart="@drawable/user"
                        android:drawablePadding="@dimen/_10sdp"
                        android:drawableTint="@color/colorPurple"
                        android:ems="10"
                        android:hint="@string/full_name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp" />

                    <EditText
                        android:id="@+id/editContact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/textbox"
                        android:drawableStart="@drawable/contact"
                        android:drawablePadding="@dimen/_15sdp"
                        android:drawableTint="@color/colorPurple"
                        android:ems="10"
                        android:hint="@string/contact_no"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/_10sdp" />

                    <EditText
                        android:id="@+id/emailBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/textbox"
                        android:drawableStart="@drawable/email"
                        android:drawablePadding="@dimen/_15sdp"
                        android:drawableTint="@color/colorPurple"
                        android:ems="10"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/_10sdp" />

                    <EditText
                        android:id="@+id/passwordBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/textbox"
                        android:drawableStart="@drawable/password"
                        android:drawablePadding="@dimen/_15sdp"
                        android:drawableTint="@color/colorPurple"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp" />

                    <EditText
                        android:id="@+id/confirm_pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/textbox"
                        android:drawableStart="@drawable/confirm_pass"
                        android:drawablePadding="@dimen/_15sdp"
                        android:drawableTint="@color/colorPurple"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/_10sdp" />

                    <TextView
                        android:id="@+id/createNewBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:background="@drawable/button_1"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/submit"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/loginBtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:background="@drawable/button_2"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/_12sdp" />


                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textColor="@color/color_white"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SmallSp" />

</androidx.constraintlayout.widget.ConstraintLayout>